[package]
name = "cloud_cull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cloud-cull"

[dependencies]
anyhow = "1.0.81"
aws-config = "1.1.8"
aws-sdk-cloudwatchlogs = "1.20.0"
aws-sdk-dynamodb = "1.19.0"
aws-sdk-ebs = "1.17.0"
aws-sdk-ec2 = "1.27.0"
aws-sdk-resourcegroupstagging = "1.17.0"
aws-sdk-sts = "1.17.0"
clap = { version = "4.5.3", features = ["derive", "cargo", "string"] }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
